macro/tests/fails/not_a_string.stderr
error: The second argument must be a literal string
 --> $DIR/not_a_string.rs:6:30
  |
6 |     tco::write!(&mut writer, not_a_string);
  |                              ^^^^^^^^^^^^
